@@ -13,6 +13,7 @@ rb-open-fluid-hotkey=Open selected fluid on hotkey [img=info]
 rb-show-hidden-objects=Show hidden objects [img=info]
 rb-show-unresearched-objects=Show unresearched objects [img=info]
 rb-show-glyphs=Show object type glyphs
+rb-show-alternate-name=Show alternate name [img=info]
 rb-use-fuzzy-search=Use fuzzy search [img=info]
 rb-use-internal-names=Use internal names [img=info]
 
@@ -21,8 +22,9 @@ rb-open-item-hotkey=If enabled, using the Recipe Book hotkey while holding an it
 rb-open-fluid-hotkey=If enabled, using the Recipe Book hotkey while hovering over a pipe, pump, storage tank, or fluid wagon will open that fluid's material page, if it exists.
 rb-show-unresearched-objects=Does not apply to recipe ingredients and products.
 rb-show-hidden-objects=Does not apply to recipe ingredients and products.
+rb-show-alternate-name=The object's alternate (internal) name will be shown in the object's tooltip. If `use internal names` is enabled, this will show the regular (localised) name.
 rb-use-fuzzy-search=More lenient pattern matching for searches.
-rb-use-internal-names=Use internal prototype names for objects and searching. You can still view an object's translation in its tooltip.
+rb-use-internal-names=Use internal prototype names for objects and searching. You can still view an object's translation in its tooltip if `show alternate name` is enabled.
 
 [shortcut-name]
 rb-toggle-gui=Recipe Book
@@ -42,6 +44,7 @@ click-to-view-technology=Click to view on technology screen.
 click-to-view=Click to view details.
 close-quick-reference=Close quick reference panel
 crafter=Crafter
+crafting-categories=Crafting categories:
 crafting-time=Crafting time:
 favorites=Favorites
 fixed-recipe=Fixed recipe:
