@@ -2,8 +2,9 @@
 Version: 2.2.1
 Date: ????
   Features:
-    - Recipe ingredients and products are shown in their tooltip
+    - Added setting to disable the green "alternate name" in object tooltips
     - Added `usable in` list to the material page, listing the labs that that science pack is usable in
+    - Added ingredients and products to recipe tooltips
   Changes:
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.0
